# flashcard-enhancer

./: .gitignore  PERFORMANCE_OPTIMIZATION.md  PYDANTIC_AI_GUIDE.md  README.md  agent.py  anki_converter.py  custom_logger.py  pyproject.toml
src/flashcard_enhancer/: __init__.py  ai_provider.py  cli.py  converter.py  enhancer.py  logging_config.py  models.py  pipeline.py  prompts.py  run_settings.py
tests/: test_cli.py  test_converter.py  test_enhancer.py  test_pipeline.py  test_prompts.py  test_run_settings.py
