[project]
name = "flashcard-enhancer"
version = "0.1.0"
description = "Convert and enhance Anki flashcards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.2.1",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "structlog>=25.4.0",
]

[project.scripts]
flashcard-enhancer = "flashcard_enhancer.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
